# streambridge

./: BACKLOG.md  BRIDGE_SPEC.md  Cargo.toml  LICENSE  README.md  ndi-to-turbojpeg-recipe.md
crates/ndi-sdk/: Cargo.toml
crates/ndi-sdk/src/: lib.rs  types.rs
crates/streambridge/: Cargo.toml
crates/streambridge/src/: discovery.rs  encode.rs  main.rs  receiver.rs  server.rs  stats.rs  test_page.rs
crates/streambridge/src/ndi/: ffi.rs  types.rs
