[package]
name = "streambridge"
version = "0.1.0"
edition = "2021"

[dependencies]
ndi-sdk = { path = "../ndi-sdk" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
turbojpeg = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
